# WildSkin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
WildSkin-rs/: Cargo.toml  build.rs  clippy.toml
WildSkin-rs/re-index/: skin-16.14.json
WildSkin-rs/src/: config.rs  crypt.rs  entry.rs  fnv.rs  keybind.rs  lib.rs  logger.rs  offset.rs  overlay.rs  skin_database.rs  state.rs
WildSkin-rs/src/app/: config.rs  keybind.rs  logger.rs  mod.rs
WildSkin-rs/src/app/skin_database/: mod.rs  tables.rs  types.rs
WildSkin-rs/src/gui/: extras.rs  global_skins.rs  keybind_input.rs  local_player.rs  logger_tab.rs  mod.rs  other_champs.rs  overlay.rs  widgets.rs
WildSkin-rs/src/memory/: mod.rs  offsets.rs  resolve.rs  scanner.rs  signatures.rs
WildSkin-rs/src/sdk/: ai_base_common.rs  champion.rs  character_data.rs  game_object.rs  game_state.rs  mod.rs  msvc_string.rs  offset.rs  primitives.rs
WildSkin-rs/src/skin_logic/: apply_frame.rs  handle_keydown.rs  mod.rs
WildSkin-rs/src/util/: crypt.rs  fnv.rs  mod.rs
abi-verify/: Cargo.toml
abi-verify-macro/: Cargo.toml
abi-verify-macro/src/: check.rs  lib.rs
abi-verify-macro/tests/: passthrough.rs
abi-verify/src/: arg_count.rs  full_signature.rs  lib.rs  pe.rs  resolve.rs
docs/investigations/: gear-system-investigation.md
scripts/: analyze-league-crash.ps1
shared/: Cargo.toml
shared/src/: lib.rs
xtask/: Cargo.toml  cleanup-watcher.ps1
xtask/src/: cmd_build.rs  cmd_setup_ollvm.rs  main.rs
