[package]
name = "wildskin"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE-GPL"

[lib]
crate-type = ["cdylib"]
name = "WildSkin"

[dependencies]
hudhook = { path = "../vendor/hudhook-0.9.1" }
shared = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
aobscan = "0.3"
dirs = { workspace = true }
paste = "1"
winsafe = { version = "0.0.28", features = ["kernel", "user"] }
abi-verify-macro = { path = "../abi-verify-macro" }

[build-dependencies]
abi-verify = { path = "../abi-verify" }
shared = { path = "../shared" }

[lints]
workspace = true
