[package]
name = "abi-verify-macro"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
abi-verify = { path = "../abi-verify" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
iced-x86 = { version = "1", default-features = false, features = ["encoder", "std"] }

[lints]
workspace = true
